<resources>
    <string name="app_name">Alarm Continue</string>
    <string name="app_contact">Alarm Continue - Contact Me</string>
    <string name="current_time_title">Current time</string>
    <string name="bedtime">Bedtime</string>
    <string name="remaining">remaining</string>
    <string name="other_alarms">Other Alarms</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="set_alarm">Set alarm</string>
    <string name="i_need_to_wake_up_at">I need to wake up at</string>
    <string name="repeat">Repeat</string>
    <string name="every_day">Every day</string>
    <string name="weekend">Weekend</string>
    <string name="workweek">Workweek</string>
    <string name="ringtones">Ringtones</string>
    <string name="clear">clear</string>
    <string name="resume_playing">Resume playing</string>
    <string name="vibrate">Vibrate</string>

    <string name="vw_confirm">Done</string>
    <string name="vw_no_video_play_app">No App exists for playing video!</string>
    <string name="vw_record_audio">Record Audio</string>
    <string name="vw_rationale_storage">Need Reading Storage Permission for Picking Files</string>
    <string name="vw_up_to_max">Already up to max</string>
    <string name="vw_no_photo_app">No photo App in this phone!</string>
    <string name="vw_no_audio_play_app">No App exists for playing audio!</string>
    <string name="vw_no_video_app">No video App in this phone!</string>
    <string name="vw_no_audio_app">No audio App in this phone!</string>
    <string name="all">All</string>
    <string name="pick_a_folder">Pick a folder</string>
    <string name="ringtone">Ringtone</string>
    <string name="none">None</string>
    <string name="alarm">Alarm</string>
    <string name="swipe_down_to_dismiss">Swipe down to dismiss</string>
    <string name="delete">Delete</string>
    <string name="alarm_set_hour_minutes">Alarm set for %dh %dmin from now</string>
    <string name="alarm_set_hour">Alarm set for %dh from now</string>
    <string name="alarm_set_minutes">Alarm set for %dmin from now</string>
    <plurals name="alarm_set_in_days">
        <item quantity="one">Alarm is set for tomorrow</item>
        <item quantity="other">Alarm is set for %d days from now</item>
    </plurals>
    <string name="time_from_to">%02d:%02d - %02d:%02d</string>
    <string name="hello_there">Hello there</string>
    <string name="min">min</string>
    <string name="hr">hr</string>
    <string name="wake_up">Wake up</string>
    <string name="wake">Wake</string>
    <string name="hour_minutes">%02d:%02d</string>
    <string name="set_default">Set default</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="no_alarms_added_yet">No alarms added yet</string>
    <string name="themes">Themes</string>
    <string name="settings_light_theme">Light theme</string>
    <string name="alarms">Alarms</string>
    <string name="settings_power_off_alarm">Power off alarm</string>
    <string name="settings_power_off_alarm_description">Alarm will trigger even when the device is off</string>
    <string name="about">About</string>
    <string name="contact_me">Contact me</string>
    <string name="acknowledgements">Acknowledgement</string>
    <string name="settings">Settings</string>
    <string name="bedtime_reminder">Bedtime reminder</string>
    <string name="bedtime_description">Your bedtime is in less than %s.</string>
    <string name="title_activity_acknowledgments">AcknowledgmentsActivity</string>
    <string name="licenses">Licenses</string>
    <string name="license_name_apache">Apache 2.0 License</string>
    <string name="license_name_cc">Creative Commons License 2.0</string>
    <string name="license_name_mit">MIT License</string>

    <string name="legal_apache">Licensed under the Apache License, Version 2.0 (the "License");you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="legal_mit">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="realm">Realm</string>
    <string name="libraries">Libraries</string>
    <string name="realm_android_adapters">Realm Android adpters</string>
    <string name="calligraphy">Calligraphy</string>
    <string name="easy_permissions">EasyPermissions</string>
    <string name="hauler">Hauler</string>
    <string name="ThreeTenABP">ThreeTenABP</string>
    <string name="lottie_android">Lottie-Android</string>
    <string name="lottie_funky_chicken">Animation Basic - Funky chicken</string>
    <string name="lottie_sound_visualizer">Sound Visualizer</string>
    <string name="lottie_techno_penguin">Techno Penguin</string>
    <string name="animations">Lottie animations</string>
    <string name="customized_libraries">Custom libraries</string>
    <string name="sleep_time_picker">SleepTimePicker</string>
    <string name="multi_type_file_picker">MultiType-FilePicker</string>
    <string name="AndroidRateThisApp">Android-RateThisApp</string>
    <string name="already_same_alarm">Please pick another time, because another alarm has already set this time.</string>

</resources>
